<resources>
    <string name="app_name">Ataxx</string>

    <string name="turn_player_one">Player 1 Turn</string>
    <string name="turn_player_two">Player 2 Turn</string>

    <string name="btn_grid">Open Grid</string>
    <string name="btn_rule">Open Rule</string>

    <string name="actionbar_game">Let\'s Play</string>
    <string name="actionbar_main">Ataxx</string>
    <string name="actionbar_information">Information</string>

    <string name="rules">Ataxx Game Rules</string>
    <string name="rule_one">Select a ball and click on the destination. The destination must be empty.</string>
    <string name="rule_two">If the distance is 1, the ball is duplicated.</string>
    <string name="rule_three">If it is 2, the ball make a jump.</string>
    <string name="rule_four">Each time your moving, the ball will infect every opposite ball around.</string>
    <string name="rule_five">Game end when one of the players can\'t move.</string>
    <string name="rule_six">The player with more balls… Win !</string>

    <string name="with_love">Made with 💚</string>

    <string name="server_off">Server is down</string>
    <string name="server_on">Server up</string>

    <string name="restart">Restart</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
